--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.6"
   },
